# py-upload-file

./: README.md  main.py  pyproject.toml
src/: app.py  validators.py
uploads/: 1affbe65-ba61-41e1-b2fe-8dd271f5276e.txt  48d6c2b1-6bf7-4d6e-96c3-3b5023d33cb5.txt  540830cd-166a-4bf5-af53-421c2d5cfc0d.txt
